--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "HENAT Lab"
-description: "Research in Network Analysis and Technology"
+description: "Health Energy Nexus Advancement Technology"
 baseurl: ""  # Leave blank for GitHub Pages
 url: "https://ucf-henat.github.io"  # Your GitHub Pages URL
 
